Fixed vertical alignment of up/down arrow in organize table
Without the fix the arrows were a few pixel below the baseline of
the text.

--- a/eclipse-scout-core/src/table/Table.less
+++ b/eclipse-scout-core/src/table/Table.less
@@ -515,3 +515,9 @@
     .animation-collapse-rotate();
   }
 }
+
+/* Required because arrow up/down symbol is not properly vertically aligned with the rest of the sort/group text */
+.sort-symbol {
+  top: -1.25px;
+  position: relative;
+}
